# TRPO_REMASTERED

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp  tictactoe.cpp
tests/: CMakeLists.txt  tictactoe_tests.cpp
